--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "ajv": "^6.6.2",
     "debug": "^4.1.1",
     "json-schema-to-openapi-schema": "^0.3.0",
-    "openapi-schema-validator": "^3.0.2",
-    "swagger-model-validator": "^3.0.6",
-    "swagger-spec-validator": "^3.0.0"
+    "openapi-schema-validator": "^3.0.2"
   }
 }
